Commit tela de Vendas Integrador

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,3 @@
 compile.on.save=true
 file.reference.mysql-connector-j-8.1.0.jar=D:\\Downloads\\[8d08b3f7-055a-41f2-bb73-81af92476048] Classificados+para+entrevista+-+003.2024..pdf
-user.properties.file=C:\\Users\\pedro\\AppData\\Roaming\\NetBeans\\23\\build.properties
+user.properties.file=/home/gm/.netbeans/23/build.properties
