--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,8 @@
 compile.on.save=true
-file.reference.mysql-connector-j-8.1.0.jar=D:\\Downloads\\[8d08b3f7-055a-41f2-bb73-81af92476048] Classificados+para+entrevista+-+003.2024..pdf
+do.depend=false
+do.jar=true
+do.jlink=false
+javac.debug=true
+javadoc.preview=true
+jlink.strip=false
 user.properties.file=C:\\Users\\pedro\\AppData\\Roaming\\NetBeans\\23\\build.properties
