--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -39,7 +39,9 @@ file.reference.mysql-connector-j-8.1.0.jar=C:\\Users\\pedro\\Downloads\\mysql-co
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-j-8.1.0.jar}
+    ${file.reference.mysql-connector-j-8.1.0.jar}:\
+    ${libs.JDBC_Connector_mysql.classpath}:\
+    ${libs.ViaCEP.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
