--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,13 +35,11 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Floricultura
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-j-8.1.0.jar=C:\\Users\\pedro\\Downloads\\mysql-connector-j-8.1.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-j-8.1.0.jar}:\
-    ${libs.JDBC_Connector_mysql.classpath}:\
-    ${libs.ViaCEP.classpath}
+    ${libs.SQL_JBDC_Driver.classpath}:\
+    ${libs.viacepAPI.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
