--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -39,7 +39,9 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.SQL_JBDC_Driver.classpath}:\
-    ${libs.viacepAPI.classpath}
+    ${libs.viacepAPI.classpath}:\
+    ${libs.ViaCEP.classpath}:\
+    ${libs.JDBC_Connector_mysql.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
